<resources>
    <string name="app_name">LoginApplicaiont</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="regPassword">Password</string>
    <string name="loginbtn">Login</string>
    <string name="createAccountbtn">Create New Account</string>
    <string name="submit">Submit</string>
    <string name="editeProfile">Edit Profile</string>
    <string name="logOut">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome !!</string>
    <string name="UserNameAcct"></string>
    <string name="updateAcctEmailLabel"></string>
</resources>